force-app/main/default/objects/CChEN_Distribuidores__c/CChEN_Distribuidores__c.object-meta.xml
<CustomObject>
    <label>CChEN Distribuidor</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Correlativo Dist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CChEN Distribuidores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>