force-app/main/default/objects/CChEN_Distribuidores__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CChEN Distribudores</relationshipLabel>
    <relationshipName>CChEN_Distribudores</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>