force-app/main/default/objects/CChEN_Distribuidores__c/fields/CChEN__c.field-meta.xml
<CustomField>
    <fullName>CChEN__c</fullName>
    <label>CChEN</label>
    <referenceTo>Yearly_CChEN_declaration__c</referenceTo>
    <relationshipLabel>CChEN Distribudores</relationshipLabel>
    <relationshipName>CChEN_Distribudores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>