force-app/main/default/objects/CChEN_Distribuidores__c/fields/CChEN_Approve__c.field-meta.xml
<CustomField>
    <fullName>CChEN_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CChEN Approve</label>
    <type>Checkbox</type>
</CustomField>