force-app/main/default/objects/CChEN_Distribuidores__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>CChEN valid until</label>
    <type>Date</type>
</CustomField>