force-app/main/default/objects/CChEN_Distribuidores__c/fields/Declaration_of_use__c.field-meta.xml
<CustomField>
    <fullName>Declaration_of_use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration of use</label>
    <type>Checkbox</type>
</CustomField>