force-app/main/default/objects/CChEN_Distribuidores__c/fields/Inventory_report__c.field-meta.xml
<CustomField>
    <fullName>Inventory_report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory report</label>
    <type>Checkbox</type>
</CustomField>