force-app/main/default/objects/CChEN_Distribuidores__c/validationRules/CCHEN_Approve.validationRule-meta.xml
<ValidationRule>
    <fullName>CCHEN_Approve</fullName>
    <active>true</active>
    <errorConditionFormula>CChEN_Approve__c = FALSE &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &quot;Approved&quot;)</errorConditionFormula>
    <errorMessage>Please submit the CChEN declaration for approval</errorMessage>
</ValidationRule>