force-app/main/default/objects/CChEN_Distribuidores__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>Declaration_of_use__c</columns>
    <columns>Inventory_report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>